--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/firestore": "^18.5.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.13",
+    "expo-constants": "^14.4.2",
     "expo-linear-gradient": "^12.5.0",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-navigation-stack": "^2.10.4",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
